// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalNav basic rendering render dynamic content 1`] = `
<div>
  <nav
    aria-label="vertical navbar"
    class="menubar menubar-transparent menubar-vertical-expand-md"
  >
    <button
      class="menubar-toggler btn btn-unstyled"
      type="button"
    >
      <span
        class="inline-item inline-item-before"
      >
        Menu
      </span>
      <svg
        class="lexicon-icon lexicon-icon-caret-bottom"
        focusable="false"
        role="presentation"
      >
        <use
          href="#caret-bottom"
        />
      </svg>
    </button>
    <div
      class="collapse menubar-collapse"
    >
      <ul
        aria-orientation="vertical"
        class="nav nav-nested"
        role="menubar"
      >
        <li
          class="nav-item"
          role="none"
        >
          <button
            aria-controls="clay-id-6"
            aria-expanded="false"
            class="nav-link collapse-icon collapsed btn btn-unstyled"
            role="menuitem"
            type="button"
          >
            Home
            <span
              class="collapse-icon-closed"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-right-small"
                focusable="false"
                role="presentation"
              >
                <use
                  href="#angle-right-small"
                />
              </svg>
            </span>
            <span
              class="collapse-icon-open"
            >
              <svg
                class="lexicon-icon lexicon-icon-angle-down-small"
                focusable="false"
                role="presentation"
              >
                <use
                  href="#angle-down-small"
                />
              </svg>
            </span>
          </button>
        </li>
        <li
          class="nav-item"
          role="none"
        >
          <button
            class="nav-link collapsed btn btn-unstyled"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            About
          </button>
        </li>
        <li
          class="nav-item"
          role="none"
        >
          <button
            class="nav-link collapsed btn btn-unstyled"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Contact
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`VerticalNav basic rendering render static content 1`] = `
<div>
  <nav
    aria-label="vertical navbar"
    class="menubar menubar-transparent menubar-vertical-expand-md"
  >
    <button
      class="menubar-toggler btn btn-unstyled"
      type="button"
    >
      <span
        class="inline-item inline-item-before"
      >
        Menu
      </span>
      <svg
        class="lexicon-icon lexicon-icon-caret-bottom"
        focusable="false"
        role="presentation"
      >
        <use
          href="#caret-bottom"
        />
      </svg>
    </button>
    <div
      class="collapse menubar-collapse"
    >
      <ul
        aria-orientation="vertical"
        class="nav nav-nested"
        role="menubar"
      >
        <li
          class="nav-item"
          role="none"
        >
          <button
            aria-current="page"
            class="nav-link active collapsed btn btn-unstyled"
            role="menuitem"
            type="button"
          >
            Home
          </button>
        </li>
        <li
          class="nav-item"
          role="none"
        >
          <button
            class="nav-link collapsed btn btn-unstyled"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            About
          </button>
        </li>
        <li
          class="nav-item"
          role="none"
        >
          <button
            class="nav-link collapsed btn btn-unstyled"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Contact
          </button>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;
